# row-level-excel-report-distributor

./: .gitignore  MASTER-WORKBOOK-SETUP.md  README.md  config.py  config.toml  delivery.py  distribute_reports.py  eventlog.py  excel_engine.py  pyproject.toml  recipients.py  run-distribute.cmd  setup.ps1
queries/: AccessKey.txt  AllowedIds.txt  Employees.txt  Sales.txt  Unrestricted.txt
sample-data/: Employees.csv  Sales.csv  sales-recipients.csv
